<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkpurple">


    <View
        android:id="@+id/rectangle"
        android:layout_width="355dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="224dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="355dp"
        android:layout_height="3dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/cream"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <View
        android:id="@+id/line1"
        android:layout_width="355dp"
        android:layout_height="3dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle" />

    <View
        android:id="@+id/rectangle2"
        android:layout_width="355dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <View
        android:id="@+id/rectangle4"
        android:layout_width="355dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle2" />

    <View
        android:id="@+id/rectangle3"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:background="@drawable/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/circle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/circle1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle"
        android:backgroundTint="@color/cream"
        app:layout_constraintBottom_toBottomOf="@+id/circle"
        app:layout_constraintEnd_toEndOf="@+id/circle"
        app:layout_constraintStart_toStartOf="@+id/circle"
        app:layout_constraintTop_toTopOf="@+id/circle" />

    <View
        android:id="@+id/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/circle1"
        app:layout_constraintEnd_toEndOf="@+id/circle1"
        app:layout_constraintStart_toStartOf="@+id/circle1"
        app:layout_constraintTop_toTopOf="@+id/circle1"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="60dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/income"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle2"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/rectangle2"
        app:layout_constraintTop_toTopOf="@+id/rectangle2"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/expense"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle4"
        app:layout_constraintEnd_toEndOf="@+id/rectangle4"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/rectangle4"
        app:layout_constraintTop_toTopOf="@+id/rectangle4"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inumber"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle2"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="@+id/rectangle2"
        app:layout_constraintTop_toTopOf="@+id/rectangle2"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enumber"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle4"
        app:layout_constraintEnd_toEndOf="@+id/rectangle4"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="@+id/rectangle4"
        app:layout_constraintTop_toTopOf="@+id/rectangle4"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lkr"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="46sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="@+id/rectangle"
        app:layout_constraintTop_toTopOf="@+id/rectangle"
        app:layout_constraintVertical_bias="0.455" />




    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/rectangle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="@+id/rectangle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="@+id/rectangle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/cream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/rectangle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:srcCompat="@drawable/chart" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:srcCompat="@drawable/profile_user" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:srcCompat="@drawable/transaction" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle2"
        app:layout_constraintStart_toStartOf="@+id/rectangle2"
        app:layout_constraintTop_toTopOf="@+id/rectangle2"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/income" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle4"
        app:layout_constraintStart_toStartOf="@+id/rectangle4"
        app:layout_constraintTop_toTopOf="@+id/rectangle4"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/spending_money" />


</androidx.constraintlayout.widget.ConstraintLayout>